# miscellaneous

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
c_c++_code/: CMakeLists.txt
c_c++_code/graph_stl/: CMakeLists.txt  README.md
c_c++_code/graph_stl/examples/: CMakeLists.txt  Example1.cpp  Example2.cpp  Example3.cpp  Example4.cpp
c_c++_code/graph_stl/include/: BFS.hpp  DFS.hpp  Graph.hpp  Search.hpp  TopologicalSortKahn.hpp
c_c++_code/graph_stl/src/: BFS.hpp  CMakeLists.txt  DFS.hpp  Graph.hpp  PrimMST.hpp  Search.hpp  Utility.hpp
c_c++_code/tree/: CMakeLists.txt  README.md
c_c++_code/tree/examples/: CMakeLists.txt  Ex1.cpp  Ex2.cpp  Ex3.cpp  Ex4.cpp
c_c++_code/tree/scripts/RBTree/: insertCase1.py
c_c++_code/tree/src/: AVLTree.hpp  BinarySearchTree.hpp  BinaryTree.hpp  CMakeLists.txt  Node.hpp  RedBlackTree.hpp  Tree.hpp
c_code/graph/: CMakeLists.txt
c_code/graph/include/: graph.h  graph.hpp
c_code/graph/src/: graph.c  graph.cpp  main.c  main.cpp
c_code/heap/: CMakeLists.txt  MaxHeap.hpp  README.md
course/: CMakeLists.txt
course/examples/: CMakeLists.txt  ColorMapping.cpp
courses/examples/: CMakeLists.txt  ColorMapping.cpp
cuda/: CMakeLists.txt  Makefile  README.md
cuda/examples/cs179/cublas_examples/: CMakeLists.txt
cuda/examples/cs179/cublas_examples/src/: CudaUtils.cu  CudaUtils.cuh  Main.cpp  SgemmGPU.cu  SgemmGPU.cuh  Timer.hpp
cuda/examples/cs179/lab1/: CMakeLists.txt
cuda/examples/cs179/lab1/cmake/: FindSndFile.cmake
cuda/examples/cs179/lab1/src/: blur.cpp  blur.cu  blur.cuh  cuda_header.cuh
cuda/examples/cs179/lab2/: CMakeLists.txt
cuda/examples/cs179/lab2/src/: ta_utilities.cpp  ta_utilities.hpp  transpose_device.cu  transpose_device.cuh  transpose_host.cpp
cuda/examples/cs179/swarm/: CMakeLists.txt
cuda/examples/cs179/swarm/src/: main.cpp  swarm.cuh
cuda/examples/hello_world/: CMakeLists.txt  HelloWorld.cu
cuda/examples/julia_set/: CMakeLists.txt  CPUBitmap.hpp  gl_helper.hpp  main.cu
cuda/examples/matrix_add/: CMakeLists.txt  main.cu
cuda/examples/shared_memory/: CMakeLists.txt  SharedMemory.cu  SharedMemory.hpp  main.cpp
cuda/examples/vec_double/: CMakeLists.txt  VecDouble.cu  VecDouble.hpp  main.cpp
cuda/examples/warp_shuffle/: CMakeLists.txt
cuda/examples/warp_shuffle/src/: Main.cu  WarpShuffle.cuh
cuda/image_processing/: CMakeLists.txt  environment.yml  requirements.txt
cuda/image_processing/scripts/: convert_to_gray.py
cuda/image_processing/src/: ConvertToGrayApp.cpp  DFT1F.hpp  DFT1FApp.cpp  FFT1F.hpp  Histogram.hpp  HistogramApp.cpp  ImageConvolution.hpp  ImageConvolutionApp.cpp  Timer.hpp
cuda/knn/: CMakeLists.txt  README.md
cuda/knn/examples/: App.cpp  CMakeLists.txt
cuda/knn/include/knn_cuda/: knn.hpp
cuda/knn/src/: knn.cpp
cuda/pointcloud/: CMakeLists.txt  README.md
cuda/pointcloud/src/: DownSampleApp.cpp  DownSampleHandler.cu  DownSampleHandler.cuh  PerceptionUtils.hpp
cv_courses/: CMakeLists.txt
cv_courses/examples/: CMakeLists.txt  ColorMapping.cpp  ColorSpaceConversion.cpp  DFT.cpp  DisparityVis.cpp  Plot.cpp  ShiTomasiCornerDetector.hpp  StereoMatching.cpp  Utility.hpp
cv_courses/integral_image/: CMakeLists.txt
cv_courses/integral_image/src/: App.cpp  IntegralImageCPU.hpp  IntegralImageCPU.ipp  IntegralImageGPU.hpp
cv_courses/keypoints_detection/: CMakeLists.txt  README.md
cv_courses/keypoints_detection/src/: FeatureMatchingApp.cpp  HarrisCornerApp.cpp
cv_courses/sr-sift/: CMakeLists.txt  Makefile  README.md  compare_warp.py  draw_match.py  kornia_homography_optimization.py  kornia_loftr_batches.py  requirements.txt  test.py  test2.py  transform_by_pil.py
cv_courses/sr-sift/src/: Main.cpp
cv_courses/stereo_vision/: CMakeLists.txt  README.md
cv_courses/stereo_vision/src/: App.cpp  BlockMatching.cpp  BlockMatching.hpp  BlockMatchingApp.cpp  SemiGlobalMatching.cpp  SemiGlobalMatching.hpp  StereoEngine.cpp  StereoEngine.hpp  Utility.hpp
eigen/: CMakeLists.txt
eigen/examples/: CMakeLists.txt  Example1.cpp
eigen/include/: TestEigen.hpp
eigen/src/: CMakeLists.txt  TestEigen.cpp
javascript/: README.md
labelling_scripts/: environment.yml  requirements.txt
motion_controller/mpc_osqp/: CMakeLists.txt
motion_controller/mpc_osqp/scripts/: test_osqp.py
motion_controller/mpc_osqp/src/: Examples.cpp  Utility.hpp
multithread/: README.md
octave/: cheatsheet.md
onnx/: README.md  environment.yml  requirements.txt
open3d/: CMakeLists.txt  TestOpen3D.cpp
open3d/examples/: CMakeLists.txt  TestOpen3D.cpp
opencv_dnn/: CMakeLists.txt
opencv_dnn/scripts/: install_opencv.bash
opencv_dnn/src/: Constants.hpp  MaskRCNN.cpp  Utility.hpp  Yolov4.cpp  Yolov4.hpp  Yolov4App.cpp
optimization/: CMakeLists.txt  test.cpp
optimization/ceres/: CMakeLists.txt  README.md
optimization/ceres/examples/: CMakeLists.txt
optimization/ceres/scripts/: install_ceres_solver.sh
optimization/cmake/: osqp-download.cmake  osqp.cmake  osqp_eigen-download.cmake  osqp_eigen.cmake
optimization/icp_ceres/: CMakeLists.txt  README.md
optimization/icp_ceres/src/: App.cpp  ICPCeres.hpp
optimization/nonlinear_least_squares/: CMakeLists.txt
optimization/nonlinear_least_squares/scripts/: test_scipy.py
optimization/nonlinear_least_squares/src/: AppUtility.hpp  CeresExample.cpp  GaussianNewtonExample.cpp  g2oExample.cpp
optimization/notebooks/: least_squares.ipynb
optimization/optical_flow/: CMakeLists.txt  README.md  requirements.txt
optimization/optical_flow/scripts/: direct_pose_estimation.py  new_types.py  test_direct_pose_estimation.py
optimization/optical_flow/src/: App.cpp  DenseOpticalFlow.hpp  DenseOpticalFlowApp.cpp  DirectPoseEstimation.cpp  DirectPoseEstimation.hpp  DirectPoseEstimationApp.cpp  OpticalFlow.cpp  OpticalFlow.hpp  Utility.hpp
qt5/: CMakeLists.txt  TestQt5.cpp
redis/examples/: CMakeLists.txt  TestClient.cpp
tensorrt/: CMakeLists.txt  Logging.hpp  TensorRTHandler.cpp  TensorRTHandler.hpp  Utility.hpp  main.cpp
test_pybinding/: CMakeLists.txt  TestPybinding.cpp  TestPybinding.py
test_pyobject/: CMakeLists.txt  TestPyobject.cpp
(+246 files in other folders)
